tests/compile_fail/conflicting_long.stderr
error: `no_long` is incompatible with `long`.
 --> $DIR/conflicting_long.rs:8:9
  |
8 |     pub value: bool,
  |         ^^^^^
